[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
jupyterlab = "^3.6.3"
pandas = "^2.0.0"
scipy = "^1.10.1"
scikit-learn = "^1.2.2"
statsmodels = "^0.13.5"
networkx = "^3.1"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
plotly = "^5.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
